--- a/index.html
+++ b/index.html
@@ -1,7 +1,61 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>This is Todd Professional Engineer office.</p>
+<html lang="zh-TW">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>陶德環境工程技師事務所</title>
+  <title>Todd Professional Environmental Engineer Office</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-white text-gray-800">
+  <header class="bg-green-700 text-white p-6">
+    <div class="max-w-6xl mx-auto flex justify-between items-center">
+      <h1 class="text-2xl font-bold">陶德環境工程技師事務所</h1>
+      <h1 class="text-2xl font-bold">Todd Professional Environmental Engineer Office</h1>
+      <nav class="space-x-4 text-sm">
+        <a href="#about" class="hover:underline">關於我們 About us</a>
+        <a href="#services" class="hover:underline">服務項目 Services</a>
+        <a href="#contact" class="hover:underline">聯絡方式 Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <section class="bg-gray-100 py-20">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-4">智慧環境．專業守護</h2>
+      <p class="text-lg text-gray-600">結合工程專業與AI科技，打造新世代環境顧問服務。</p>
+    </div>
+  </section>
+
+  <section id="about" class="py-16 max-w-4xl mx-auto px-4">
+    <h3 class="text-2xl font-bold mb-4">關於我們</h3>
+    <p class="text-gray-700 leading-relaxed">
+      本事務所是由專業環境工程技師創立，擁有多年製造業環境管理與數位轉型經驗，提供創新的智慧環境解決方案。我們專注於環境資料分析、感測技術、AI應用及污染控制設計。
+    </p>
+  </section>
+
+  <section id="services" class="bg-gray-50 py-16 px-4">
+    <div class="max-w-4xl mx-auto">
+      <h3 class="text-2xl font-bold mb-6">服務項目</h3>
+      <ul class="space-y-4 text-gray-800">
+        <li>• 環保法規諮詢與技師簽證服務</li>
+        <li>• 工廠污染控制規劃與設備設計</li>
+        <li>• 環安衛或其他系統程式設計與開發</li>
+        <li>• 環境/安全之AI模型建置與預測服務</li>
+        <li>• 環境感測器應用與數據分析</li>        
+      </ul>
+    </div>
+  </section>
+
+  <section id="contact" class="py-16 max-w-4xl mx-auto px-4">
+    <h3 class="text-2xl font-bold mb-4">聯絡方式 Contact</h3>
+    <p class="mb-2">Email：<a href="mailto:yclin.todd@gmail.com" class="text-green-700 underline">yclin.todd@gmail.com</a></p>
+    <p class="mb-2">電話：<a href="tel:+886963083767" class="text-green-700 underline">0963-083-767</a></p>
+    <p>地址：臺中市西屯區台灣大道四段847號16樓</p>
+  </section>
+
+  <footer class="bg-green-700 text-white text-center py-4">
+    <p class="text-sm">&copy; 2025 陶德環境工程技師事務所/Todd Professional Environmental Engineer Office. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
