--- a/index.html
+++ b/index.html
@@ -2,60 +2,87 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>陶德環境工程技師事務所</title>
-  <title>Todd Professional Environmental Engineer Office</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>陶德環境工程技師事務所 | Todd Environmental Engineer Office</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white text-gray-800">
-  <header class="bg-green-700 text-white p-6">
-    <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">陶德環境工程技師事務所</h1>
-      <h1 class="text-2xl font-bold">Todd Professional Environmental Engineer Office</h1>
+<body class="bg-white text-gray-800 font-sans">
+
+  <!-- Header -->
+  <header class="bg-green-700 text-white p-6 shadow">
+    <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center">
+      <h1 class="text-2xl font-bold mb-2 md:mb-0">陶德環境工程技師事務所<br><span class="text-sm font-normal">Todd Environmental Engineer Office</span></h1>
       <nav class="space-x-4 text-sm">
-        <a href="#about" class="hover:underline">關於我們 About us</a>
-        <a href="#services" class="hover:underline">服務項目 Services</a>
-        <a href="#contact" class="hover:underline">聯絡方式 Contact</a>
+        <a href="#about" class="hover:underline">關於 | About</a>
+        <a href="#services" class="hover:underline">服務 | Services</a>
+        <a href="#contact" class="hover:underline">聯絡 | Contact</a>
       </nav>
     </div>
   </header>
 
+  <!-- Hero -->
   <section class="bg-gray-100 py-20">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-4">智慧環境．專業守護</h2>
-      <p class="text-lg text-gray-600">結合工程專業與AI科技，打造新世代環境顧問服務。</p>
+    <div class="max-w-4xl mx-auto text-center px-4">
+      <h2 class="text-4xl font-bold mb-4">智慧環境．專業守護<br><span class="text-2xl text-gray-600">Smart Environment, Professional Commitment</span></h2>
+      <p class="text-lg text-gray-700">結合工程專業與AI科技，打造新世代環境顧問服務。<br>Combining engineering expertise and AI technology to create next-generation environmental consulting.</p>
     </div>
   </section>
 
-  <section id="about" class="py-16 max-w-4xl mx-auto px-4">
-    <h3 class="text-2xl font-bold mb-4">關於我們</h3>
+  <!-- About -->
+  <section id="about" class="py-16 px-4 max-w-4xl mx-auto">
+    <h3 class="text-2xl font-bold mb-4">關於我們｜About Us</h3>
+    <p class="text-gray-700 leading-relaxed mb-4">
+      本事務所由專業環境工程技師創立，具備製造業環境管理與數位轉型多年經驗，專注於環境資料分析、感測技術、AI應用與污染控制設計。
+    </p>
     <p class="text-gray-700 leading-relaxed">
-      本事務所是由專業環境工程技師創立，擁有多年製造業環境管理與數位轉型經驗，提供創新的智慧環境解決方案。我們專注於環境資料分析、感測技術、AI應用及污染控制設計。
+      Our office is founded by a licensed professional environmental engineer with extensive experience in manufacturing environmental management and digital transformation. We specialize in environmental data analysis, sensing technologies, AI applications, and pollution control system design.
     </p>
   </section>
 
+  <!-- Services -->
   <section id="services" class="bg-gray-50 py-16 px-4">
     <div class="max-w-4xl mx-auto">
-      <h3 class="text-2xl font-bold mb-6">服務項目</h3>
-      <ul class="space-y-4 text-gray-800">
-        <li>• 環保法規諮詢與技師簽證服務</li>
-        <li>• 工廠污染控制規劃與設備設計</li>
-        <li>• 環安衛或其他系統程式設計與開發</li>
-        <li>• 環境/安全之AI模型建置與預測服務</li>
-        <li>• 環境感測器應用與數據分析</li>        
+      <h3 class="text-2xl font-bold mb-6">服務項目｜Our Services</h3>
+      <ul class="space-y-4 text-gray-800 text-base list-disc pl-6">
+        <li>
+          環保法規諮詢與技師簽證服務<br>
+          <span class="text-sm text-gray-600">Environmental regulation consulting & licensed engineer signing</span>
+        </li>
+        <li>
+          工廠污染控制規劃與設備設計<br>
+          <span class="text-sm text-gray-600">Factory pollution control planning & equipment design</span>
+        </li>
+        <li>
+          環安衛或其他系統程式設計與開發<br>
+          <span class="text-sm text-gray-600">EH&S and other environmental system software development</span>
+        </li>
+        <li>
+          環境/安全之AI模型建置與預測服務<br>
+          <span class="text-sm text-gray-600">AI modeling & forecasting for environmental/safety applications</span>
+        </li>
+        <li>
+          環境感測器應用與數據分析<br>
+          <span class="text-sm text-gray-600">Environmental sensors application & data analytics</span>
+        </li>
       </ul>
     </div>
   </section>
 
-  <section id="contact" class="py-16 max-w-4xl mx-auto px-4">
-    <h3 class="text-2xl font-bold mb-4">聯絡方式 Contact</h3>
-    <p class="mb-2">Email：<a href="mailto:yclin.todd@gmail.com" class="text-green-700 underline">yclin.todd@gmail.com</a></p>
-    <p class="mb-2">電話：<a href="tel:+886963083767" class="text-green-700 underline">0963-083-767</a></p>
-    <p>地址：臺中市西屯區台灣大道四段847號16樓</p>
+  <!-- Contact -->
+  <section id="contact" class="py-16 px-4 max-w-4xl mx-auto">
+    <h3 class="text-2xl font-bold mb-4">聯絡方式｜Contact</h3>
+    <div class="text-gray-700 space-y-2">
+      <p>Email：<a href="mailto:yclin.todd@gmail.com" class="text-green-700 underline">yclin.todd@gmail.com</a></p>
+      <p>電話 Phone：<a href="tel:+886963083767" class="text-green-700 underline">0963-083-767</a></p>
+      <p>地址 Address：臺中市西屯區台灣大道四段847號16樓<br>
+         16F., No.847, Sec. 4, Taiwan Blvd., Xitun Dist., Taichung City, Taiwan</p>
+    </div>
   </section>
 
+  <!-- Footer -->
   <footer class="bg-green-700 text-white text-center py-4">
-    <p class="text-sm">&copy; 2025 陶德環境工程技師事務所/Todd Professional Environmental Engineer Office. All Rights Reserved.</p>
+    <p class="text-sm">&copy; 2025 陶德環境工程技師事務所 | Todd Environmental Engineer Office. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
