--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>陶德環境工程技師事務所 | Todd Environmental Engineer Office</title>
+  <title>陶德環境工程技師事務所 | Todd Professional Environmental Engineer Office</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800 font-sans">
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="bg-green-700 text-white p-6 shadow">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center">
-      <h1 class="text-2xl font-bold mb-2 md:mb-0">陶德環境工程技師事務所<br><span class="text-sm font-normal">Todd Environmental Engineer Office</span></h1>
+      <h1 class="text-2xl font-bold mb-2 md:mb-0">陶德環境工程技師事務所<br><span class="text-sm font-normal">Todd Professional Environmental Engineer Office</span></h1>
       <nav class="space-x-4 text-sm">
         <a href="#about" class="hover:underline">關於 | About</a>
         <a href="#services" class="hover:underline">服務 | Services</a>
@@ -81,7 +81,7 @@
 
   <!-- Footer -->
   <footer class="bg-green-700 text-white text-center py-4">
-    <p class="text-sm">&copy; 2025 陶德環境工程技師事務所 | Todd Environmental Engineer Office. All Rights Reserved.</p>
+    <p class="text-sm">&copy; 2025 陶德環境工程技師事務所 | Todd Professional Environmental Engineer Office. All Rights Reserved.</p>
   </footer>
 
 </body>
