--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <span class="text-sm text-gray-600">Factory pollution control planning & equipment design</span>
         </li>
         <li>
-          環安衛或其他系統程式設計與開發<br>
-          <span class="text-sm text-gray-600">EH&S and other environmental system software development</span>
+          環安衛、永續或其他系統程式設計與開發<br>
+          <span class="text-sm text-gray-600">EHS, ESG and other environmental system softwares development</span>
         </li>
         <li>
           環境/安全之AI模型建置與預測服務<br>
