--- a/birthdayVision_index.html
+++ b/birthdayVision_index.html
@@ -8,6 +8,24 @@
 </head>
 <body class="bg-white text-gray-800 font-sans">
 
+<!-- Birthday Surprise for Tina -->
+<div id="birthday-popup" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-2xl shadow-xl p-8 max-w-sm text-center animate-bounce">
+    <h2 class="text-3xl font-bold text-pink-600 mb-2">🎂 Happy Birthday Tina! 🎉</h2>
+    <p class="text-gray-700 mb-4">From Todd, with all his heart. ❤️<br>Wishing you love, joy, and endless happiness!</p>
+    <button onclick="document.getElementById('birthday-popup').classList.add('hidden')" class="bg-pink-500 hover:bg-pink-600 text-white px-4 py-2 rounded-full mt-2">
+      💖 Thank you!
+    </button>
+  </div>
+</div>
+
+<script>
+  window.addEventListener('load', () => {
+    document.getElementById('birthday-popup').classList.remove('hidden');
+  });
+</script>
+
+
   <!-- Header -->
   <header class="bg-green-700 text-white p-6 shadow">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center">
